--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Resume</title>
+    <title>Resham</title>
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -67,15 +67,15 @@
                 <h4>WHO AM I</h4>
                 <h1 class="size-50">Know <br /> About me</h1>
                 <div class="h-50"></div>
-                <p>I'm an artist who loves to paint, sketch and design stuff specially mandala . Art</p>
-                <p>Currently enrolled in an interior designing course in Bangalore, Karnataka.</p>
+                <p id="about-text">I am an undergraduate student pursuing medicine. 
+                    Here's a glimpse into my art journey—a parallel world of colors and imagination interwoven with my pursuit of medicine. Join me as I navigate the intricate balance between science and creativity, sharing my passion one stroke at a time.</p>
                 <div class="h-50"></div> 
                 <!-- <img src="img/Signature.svg" width="230" alt="" /> -->
                 <div class="h-50"></div>
             </div>
             <div class="col-md-6 about-img-div">
                 <div class="about-border" data-aos="fade-up" data-aos-delay=".5"></div>
-                <img src="img/portfolio/resh02.jpg" width="400" class="img-responsive" alt="" align="right" data-aos="fade-right" data-aos-delay="0" />
+                <img src="img/portfolio/resh06.jpg" width="400" class="img-responsive" alt="" align="right" data-aos="fade-right" data-aos-delay="0" />
             </div>
         </div>
     </div>
